# flow-go

./: .custom-gcl.yml  .dockerignore  .editorconfig  .envrc  .gitattributes  .github_sync_trigger  .gitignore  .gitmodules  .golangci.yml  .indent.pro  .mockery.yaml  .mockery_v3.yml  .policy.yml  .travis  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  COPYING.LESSER  COPYRIGHT  CodingConventions.md  DEVELOPMENT.md  Dockerfile  INSTRUCTIONS.MD  LicensingApproach.md  Makefile  NOTICE  README.md  SECURITY.md  Strictus.g4  TUTORIAL.MD  USAGE.md  access-api.md  asdf  bamboo.json  bamboo.mnemonic  (+27 more)
bench/: CMakeLists.txt  bench_bn.c  bench_cp.c  bench_dv.c  bench_eb.c  bench_ec.c  bench_ep.c  bench_epx.c  bench_err.c  bench_error.c  bench_fb.c  bench_fbx.c  bench_fp.c  bench_fpx.c  bench_ft.c  bench_hb.c  bench_pb.c  bench_pc.c  bench_pp.c  bench_rand.c
src/: CMakeLists.txt  relic_bench.c  relic_conf.c  relic_core.c  relic_err.c  relic_error.c  relic_pool.c  relic_rand.c  relic_test.c  relic_trace.c  relic_util.c
src/arch/: relic_arch_arm.c  relic_arch_avr.c  relic_arch_default.c  relic_arch_msp.c  relic_arch_none.c  relic_arch_x64.c  relic_arch_x86.c  relic_arch_x86_64.c
src/bc/: relic_bc_aes.c  rijndael-alg-fst.c  rijndael-api-fst.c
src/bn/: relic_bn_add.c  relic_bn_cmp.c  relic_bn_div.c  relic_bn_factor.c  relic_bn_gcd.c  relic_bn_lcm.c  relic_bn_mem.c  relic_bn_mod.c  relic_bn_mul.c  relic_bn_mxp.c  relic_bn_prime.c  relic_bn_rec.c  relic_bn_shift.c  relic_bn_smb.c  relic_bn_sqr.c  relic_bn_util.c
src/cp/: relic_cp_bbs.c  relic_cp_bdpe.c  relic_cp_bls.c  relic_cp_ecdh.c  relic_cp_ecdsa.c  relic_cp_ecies.c  relic_cp_ecmqv.c  relic_cp_ecss.c  relic_cp_phpe.c  relic_cp_rabin.c  relic_cp_rsa.c  relic_cp_schnorr.c  relic_cp_sokaka.c
src/dv/: relic_dv_mem.c  relic_dv_util.c
src/eb/: relic_eb_add.c  relic_eb_curve.c  relic_eb_dbl.c  relic_eb_frb.c  relic_eb_hlv.c  relic_eb_map.c  relic_eb_mul.c  relic_eb_mul_fix.c  relic_eb_mul_sim.c  relic_eb_neg.c  relic_eb_norm.c  relic_eb_param.c  relic_eb_pck.c  relic_eb_util.c
src/ep/: relic_ep_add.c  relic_ep_curve.c  relic_ep_dbl.c  relic_ep_glv.c  relic_ep_map.c  relic_ep_mul.c  relic_ep_mul_fix.c  relic_ep_mul_sim.c  relic_ep_neg.c  relic_ep_norm.c  relic_ep_param.c  relic_ep_pck.c  relic_ep_util.c
src/ep2/: relic_ep2_add.c  relic_ep2_curve.c  relic_ep2_dbl.c  relic_ep2_norm.c  relic_ep2_util.c
src/epx/: relic_ep2_add.c  relic_ep2_curve.c  relic_ep2_dbl.c  relic_ep2_frb.c  relic_ep2_map.c  relic_ep2_mul.c  relic_ep2_mul_fix.c  relic_ep2_mul_sim.c  relic_ep2_neg.c  relic_ep2_norm.c  relic_ep2_pck.c  relic_ep2_util.c
src/fb/: relic_fb_add.c  relic_fb_cmp.c  relic_fb_exp.c  relic_fb_inv.c  relic_fb_itr.c  relic_fb_mul.c  relic_fb_param.c  relic_fb_poly.c  relic_fb_rdc.c  relic_fb_shift.c  relic_fb_slv.c  relic_fb_sqr.c  relic_fb_srt.c  relic_fb_trc.c  relic_fb_util.c
src/fbx/: relic_fb12_mul.c  relic_fb2_mul.c  relic_fb4_mul.c  relic_fb6_mul.c  relic_fbx_exp.c  relic_fbx_frb.c  relic_fbx_inv.c  relic_fbx_mul.c  relic_fbx_slv.c  relic_fbx_sqr.c
src/fp/: relic_fp_add.c  relic_fp_cmp.c  relic_fp_exp.c  relic_fp_inv.c  relic_fp_mul.c  relic_fp_param.c  relic_fp_prime.c  relic_fp_rdc.c  relic_fp_shift.c  relic_fp_sqr.c  relic_fp_srt.c  relic_fp_util.c
src/fpx/: relic_fp12_mul.c  relic_fp12_sqr.c  relic_fp18_mul.c  relic_fp18_sqr.c  relic_fp2_mul.c  relic_fp2_sqr.c  relic_fp3_mul.c  relic_fp3_sqr.c  relic_fp6_mul.c  relic_fp6_sqr.c  relic_fpx_add.c  relic_fpx_cmp.c  relic_fpx_exp.c  relic_fpx_frb.c  relic_fpx_inv.c  relic_fpx_pck.c  relic_fpx_rdc.c  relic_fpx_srt.c  relic_fpx_util.c
src/ft/: relic_ft_add.c  relic_ft_cmp.c  relic_ft_crt.c  relic_ft_cub.c  relic_ft_mul.c  relic_ft_param.c  relic_ft_poly.c  relic_ft_rdc.c  relic_ft_shift.c  relic_ft_util.c
src/hb/: relic_hb_add.c  relic_hb_curve.c  relic_hb_dbl.c  relic_hb_mul.c  relic_hb_mul_fix.c  relic_hb_mul_sim.c  relic_hb_neg.c  relic_hb_norm.c  relic_hb_oct.c  relic_hb_param.c  relic_hb_rand.c  relic_hb_util.c
src/hf/: relic_hf_sha1.c  relic_hf_sha224.c  relic_hf_sha256.c  relic_hf_sha384.c  relic_hf_sha512.c  sha1.c  sha224-256.c  sha384-512.c
src/low/avr-asm-158/: relic_bn_shift_low.c  relic_fp_add_low.c  relic_fp_add_low.s  relic_fp_mul_low.c  relic_fp_mul_low.s  relic_fp_rdc_low.c  relic_fp_rdc_low.s  relic_fp_shift_low.c  relic_fp_shift_low.s  relic_fp_sqr_low.c  relic_fp_sqr_low.s
src/low/avr-asm-163/: relic_bn_add_low.s  relic_bn_cmp_low.c  relic_bn_shift_low.c  relic_bn_shift_low.s  relic_fb_add_low.c  relic_fb_add_low.s  relic_fb_mul_low.c  relic_fb_mul_low.s  relic_fb_rdc_low.c  relic_fb_rdc_low.s  relic_fb_shift_low.c  relic_fb_shift_low.s  relic_fb_sqr_low.c  relic_fb_sqr_low.s
src/low/avr-asm-271/: relic_fb_add_low.s  relic_fb_mul_low.c  relic_fb_mul_low.s  relic_fb_rdc_low.c  relic_fb_rdc_low.s  relic_fb_shift_low.c  (+5 more)
src/md/: relic_md_hmac.c  relic_md_kdf.c  relic_md_mgf.c  relic_md_sha1.c  relic_md_sha224.c  relic_md_sha256.c  relic_md_sha384.c  relic_md_sha512.c  sha.h  sha1.c  sha224-256.c  sha384-512.c
src/pb/: relic_pb_etat.c  relic_pb_etat1.c  relic_pb_etat2.c  relic_pb_fb12.c  relic_pb_fb2.c  relic_pb_fb4.c  relic_pb_fb6.c  relic_pb_map.c  relic_pb_oate2.c  relic_pb_oeta2.c
src/pc/: relic_pc_util.c
src/pp/: relic_ep2_add.c  relic_ep2_curve.c  relic_ep2_dbl.c  relic_ep2_frb.c  relic_ep2_map.c  relic_ep2_mul.c  relic_ep2_mul_fix.c  relic_ep2_mul_sim.c  relic_ep2_neg.c  relic_ep2_norm.c  relic_ep2_util.c  relic_pp_add.c  relic_pp_dbl.c  relic_pp_ep2.c  relic_pp_exp.c  relic_pp_fp12.c  relic_pp_fp2.c  relic_pp_fp6.c  relic_pp_map.c  relic_pp_norm.c  relic_pp_pair.c  relic_pp_rate.c
src/rand/: relic_rand_call.c  relic_rand_core.c  relic_rand_fips.c  relic_rand_hash.c  relic_rand_rdrnd.c  relic_rand_udev.c
test/: CMakeLists.txt  test_bn.c  test_core.c  test_cp.c  test_dv.c  test_eb.c  test_ec.c  test_ep.c  test_epx.c  test_err.c  test_error.c  test_fb.c  test_fbx.c  test_fp.c  test_fpx.c  test_ft.c  test_hb.c  test_hf.c  test_md.c  test_pb.c  test_pc.c  test_pp.c  test_rand.c
(+13775 files in other folders)
